feature: implement controlled-input class w/ utils & types

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./static/css/style.css">
   <script src="./static/bundle/script.js" defer></script>
-  <title>Document</title>
+  <title>Controlled Input | Assignment</title>
 </head>
 <body>
-  <h1 class="title-greet">Hello World</h1>
+  <main>
+    <header>
+      <h2>Controlled Input - Assignment</h2>
+      <small>M. Emre Ozgun</small>
+    </header>
+    <section>
+      <div id="inputHost">
+      </div>
+    </section>
+    <!-- <section>
+      <div id="inputHost2">
+      </div>
+    </section>
+    <section>
+      <div id="inputHost3">
+      </div>
+    </section> -->
+  </main>
 </body>
 </html>
